code/tui/src/app/snapshots/app__guardian_tests__guardian_setup_fullscreen_chinese.snap
---
source: code/tui/src/app/guardian_tests.rs
expression: render(&app)
---
  .                                                           [— / —] [仪 表 盘 ]  
                                                                                
> /guard┌── Guardian ──────────────────────────────────────────────[✗]─┐        
        │                                                              │        
        │  /project                                                    │        
        │  扫 描 项 目 …                                                 + │        
        │  保 存 已 审 核 资 料                                             + │        
        │> ASH.md                                             已 接 受  + │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
  ──────│  Enter 确 认  · ←/→ 详 情  · Esc 关 闭                             │──────  
  > 构 建 └──────────────────────────────────────────────────────────────┘        
  ────────────────────────────────────────────────────────────────── 自 动 模 型
